--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "selftitled",
   "version": "1.0.0",
   "scripts": {
-    "vercel-build": "npm install wasm-pack && npx wasm-pack build --target web --out-dir ./web/pkg"
+    "vercel-build": "curl https://sh.rustup.rs -sSf | sh -s -- -y && export PATH=\"$HOME/.cargo/bin:$PATH\" && npm install wasm-pack && npx wasm-pack build --target web --out-dir ./web/pkg"
   }
 }
