--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,15 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "WebGlRenderingContext"] }
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "HtmlCanvasElement",
+    "WebGlRenderingContext",
+    "WebGlProgram",
+    "WebGlShader",
+    "WebGlBuffer",
+    "WebGlUniformLocation",
+    "console"
+]}
+js-sys = "0.3"
